<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/shoe_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/shoe_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/enter_shoe_name"
                android:inputType="text"
                android:text="@{shoe.name}"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/company_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:text="@string/company" />

            <EditText
                android:id="@+id/company_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/enter_company_name"
                android:inputType="text"
                android:text="@{shoe.company}"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/size_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/size_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/enter_shoe_size"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(shoe.size)}"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:text="@{shoe.description}"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/block_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="false"
            android:gravity="center"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_layout">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/left_curved_bg"
                android:gravity="center"
                android:lineSpacingMultiplier="1.19"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/right_curved_bg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.19"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>