<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/login"
                android:textColor="@color/colorNobelGray"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="start"
                    android:text="@string/account_details"
                    android:textColor="@color/colorDoveGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/colorDoveGray"
                    android:textColorHint="@color/colorNobelGray"
                    android:textSize="16sp"
                    android:theme="@style/EditTextTheme" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/selector_show_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:text=""
                        android:textColor="@color/colorDoveGray"
                        android:textColorHint="@color/colorNobelGray"
                        android:textSize="16sp"
                        android:theme="@style/EditTextTheme" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="16dp"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/sign_up_button"
                        android:lineSpacingMultiplier="1.14"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="36dp"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/sign_up_button"
                        android:lineSpacingMultiplier="1.14"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>